test_regress/t/t_gate_array_multidim_bad.out
%Error-UNSUPPORTED: t/t_gate_array_multidim_bad.v:9:15: Unsupported: Multidimensional gate instances.
    9 |    and g [1:0][1:0] (y, a, b);
      |               ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
